--- a/index.html
+++ b/index.html
@@ -8,24 +8,26 @@
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
-  <div class="card-wrapper">
-    <div class="card">
-      <div class="card-image">
-        <img src="./images/image-qr-code.png" alt="QR-code">
+  <main>
+    <article class="card-wrapper">
+      <div class="card">
+        <div class="card-image">
+          <img src="./images/image-qr-code.png" alt="QR-code">
+        </div>
+        <div class="card-text">
+          <h1 class="bold">
+            Improve your front-end
+            skills by building projects
+          </h1>
+          <p>
+            Scan the QR code to visit Frontend 
+            Mentor and take your coding skill to
+            the next level
+          </p>
+        </div>
       </div>
-      <div class="card-text">
-        <h1 class="bold">
-          Improve your front-end
-          skills by building projects
-        </h1>
-        <p>
-          Scan the QR code to visit Frontend 
-          Mentor and take your coding skill to
-          the next level
-        </p>
-      </div>
-    </div>
-  </div>
+    </article>
+  </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Alan Paton</a>.
